syntax = "proto3";
package codern.auth;
import "common.proto"; 

message AuthRequest {
  string session = 1;
}

message AuthResponse {
  User user = 1;
}

message LogoutRequest {
  string session = 1;
}

message GoogleAuthUrlResponse {
  string url = 1;
}

message GoogleAuthRequest {
  string code = 1;
  string ipAddress = 2;
  string userAgent = 3;
}

message GoogleAuthResponse {
  string cookieHeader = 1;
}

message GetUserByIdsRequest {
  repeated string userIds = 1;
}

message GetUserByIdsResponse {
  repeated User users = 1;
}

message GetOwnerDetailRequest {
  string ownerId = 1;
}

message GetOwnerDetailResponse {
  Owner owner = 1;
}
