syntax = "proto3";
package codern.auth;

import "auth/entity.proto";
import "auth/message.proto"; 

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (Empty);
  rpc GetGoogleOAuthUrl(Empty) returns (GoogleAuthUrlResponse);
  rpc LoginWithGoogle(GoogleAuthRequest) returns (GoogleAuthResponse);
  rpc GetUserByIds(GetUserByIdsRequest) returns (GetUserByIdsResponse);
  rpc GetOwnerDetail(GetOwnerDetailRequest) returns (GetOwnerDetailResponse);
}
